Closed
Bug 1504188
Opened 7 years ago
Closed 7 years ago
Can't build on Mac with sandbox disabled
Categories
(Core :: Security: Process Sandboxing, defect)
Core
Security: Process Sandboxing
Tracking
()
RESOLVED
FIXED
mozilla65
Tracking | Status | |
---|---|---|
firefox65 | --- | fixed |
People
(Reporter: marco, Assigned: marco)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
995 bytes,
patch
|
haik
:
review+
|
Details | Diff | Splinter Review |
1.63 KB,
patch
|
haik
:
review+
|
Details | Diff | Splinter Review |
[task 2018-11-02T11:41:09.594Z] 11:41:09 INFO - In file included from /builds/worker/workspace/build/src/obj-firefox/dom/ipc/Unified_cpp_dom_ipc0.cpp:47:
[task 2018-11-02T11:41:09.594Z] 11:41:09 INFO - /builds/worker/workspace/build/src/dom/ipc/ContentParent.cpp:2175:24: error: no member named 'GetAppPath' in 'nsMacUtilsImpl'
[task 2018-11-02T11:41:09.594Z] 11:41:09 INFO - if (!nsMacUtilsImpl::GetAppPath(appPath)) {
[task 2018-11-02T11:41:09.594Z] 11:41:09 INFO - ~~~~~~~~~~~~~~~~^
[task 2018-11-02T11:41:09.594Z] 11:41:09 INFO - /builds/worker/workspace/build/src/dom/ipc/ContentParent.cpp:2236:23: error: no member named 'GetDirectoryPath' in 'nsMacUtilsImpl'
[task 2018-11-02T11:41:09.596Z] 11:41:09 INFO - nsMacUtilsImpl::GetDirectoryPath(bloatLog);
[task 2018-11-02T11:41:09.596Z] 11:41:09 INFO - ~~~~~~~~~~~~~~~~^
[task 2018-11-02T11:41:09.596Z] 11:41:09 INFO - 2 errors generated.
[task 2018-11-02T11:41:09.596Z] 11:41:09 INFO - /builds/worker/workspace/build/src/config/rules.mk:1135: recipe for target 'Unified_cpp_dom_ipc0.o' failed
Assignee | ||
Updated•7 years ago
|
Assignee: nobody → mcastelluccio
Status: NEW → ASSIGNED
Assignee | ||
Comment 2•7 years ago
|
||
Attachment #9022119 -
Flags: review?(agaynor)
Assignee | ||
Comment 3•7 years ago
|
||
Attachment #9022157 -
Flags: review?(agaynor)
Comment 4•7 years ago
|
||
Thanks for fixing this, Marco. Alex is on PTO right now
Updated•7 years ago
|
Attachment #9022119 -
Flags: review?(agaynor) → review+
Updated•7 years ago
|
Attachment #9022157 -
Flags: review?(agaynor) → review+
Pushed by mcastelluccio@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/11b22116160c
Don't define AppendSandboxParams if building the sandbox is disabled. r=haik
https://hg.mozilla.org/integration/mozilla-inbound/rev/ab19a1589b29
Don't include Sandbox.h and don't use EarlyStartMacSandboxIfEnabled if the sandbox is disabled. r=haik
Comment 6•7 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/11b22116160c
https://hg.mozilla.org/mozilla-central/rev/ab19a1589b29
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
You need to log in
before you can comment on or make changes to this bug.
Description
•