Bug 1504188 - Don't include Sandbox.h and don't use EarlyStartMacSandboxIfEnabled if the sandbox is disabled. r=haik